Fix Mod Updating
Test Manifest seems to be updated, so I'm going to commit what I have and we'll test it further.